# coding-agent-compare

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
docs-generated-by-claude/: 02-grader-role-explained.md  02-implementation-plan-step-by-step.md  03-implement-step-1.md  11-host-grader-pipeline.md  12-grade-json-schema.md  13-product-vs-harness-modes.md
harness/: __init__.py  __main__.py  cli.py  driver.py  manifest.py  runner.py  task.py  worktree.py
harness/graders/: __init__.py  base.py  grade.py  mock.py  scope.py  size.py  swebench_host.py
harness/parsers/: __init__.py  claude.py  copilot.py  event.py
harness/providers/: __init__.py  base.py  swebench.py
harness/tests/: test_cli.py  test_driver.py  test_grade_doc_in_sync.py  test_graders_mock.py  test_graders_scope.py  test_graders_size.py  test_graders_swebench_host.py  test_manifest.py  test_parsers.py  test_providers.py  test_runner.py  test_swebench.py  test_task.py  test_worktree.py
prompts/: 01-generate-claude-md.md  02-plan-in-details.md  03-implement-step-1.md  04-implement-step-2.md  05-implement-step-3.md  06-implement-step-4.md  07-implement-step-5.md  08-implement-step-6.md  09-implement-step-7.md  10-implement-step-8.md  11-implement-step-9.md  12-implement-step-10.md  13-implement-step-11.md
scripts/: README.md  check_prereqs.ps1  check_prereqs.sh  grade_smoke_tasks.py  run_claude.sh  run_copilot.sh  run_harness_smoke.sh  run_product_smoke.sh  verify_wrappers.sh
tasks/: swebench_smoke.yaml  swebench_smoke_grade.yaml
(+3 files in other folders)
